[gd_scene load_steps=4 format=3 uid="uid://dtma7x27jbc"]

[ext_resource type="PackedScene" uid="uid://j3ey38ee1013" path="res://Models/ModelMalek.blend" id="1_7adcl"]
[ext_resource type="Script" path="res://Escenes i Nodos/Escenes completes/navallades.gd" id="1_h2uxc"]
[ext_resource type="PackedScene" uid="uid://clvror12cvge2" path="res://Models/ModelSaïd.blend" id="2_uiybe"]

[node name="Navallades" type="Node3D"]
script = ExtResource("1_h2uxc")

[node name="ModelMalek" parent="." instance=ExtResource("1_7adcl")]
transform = Transform3D(1, 0.000380167, 0.000893339, -0.000388876, 0.999952, 0.00977962, -0.000889582, -0.00977993, 0.999952, -0.000507611, -0.176434, -1.65121)

[node name="Skeleton3D" parent="ModelMalek/Armature_001" index="0"]
bones/0/rotation = Quaternion(-0.0635262, 1.18969e-07, -7.57291e-09, 0.99798)
bones/1/rotation = Quaternion(0.0568847, -0.000185266, 0.00147936, 0.99838)
bones/2/rotation = Quaternion(0.0338301, 1.13409e-16, 8.06573e-09, 0.999428)
bones/3/rotation = Quaternion(0.175508, -2.18598e-16, 4.18443e-08, 0.984478)
bones/5/position = Vector3(0.613596, 1.99904, 0.0611297)
bones/5/rotation = Quaternion(0.000155702, 0.0520815, -0.98023, 0.190883)
bones/6/rotation = Quaternion(0.0526258, 8.27036e-05, -0.0242797, 0.998319)
bones/7/rotation = Quaternion(0.0561614, -0.0174399, -0.0166868, 0.99813)
bones/9/position = Vector3(0.323989, 0.058388, 0.0316938)
bones/9/rotation = Quaternion(0.00242251, 0.103739, 0.99412, -0.0309444)
bones/10/rotation = Quaternion(-0.143959, 0.00529495, -0.00886512, 0.98953)
bones/11/rotation = Quaternion(0.591559, -6.43903e-08, -0.0100252, 0.8062)
bones/13/position = Vector3(-0.622224, 1.99536, 0.0609295)
bones/13/rotation = Quaternion(0.184464, 0.332207, 0.82177, 0.424624)
bones/14/rotation = Quaternion(0.471146, 0.170981, 0.152632, 0.851758)
bones/15/rotation = Quaternion(0.0561614, 0.0174399, 0.0166868, 0.99813)
bones/16/rotation = Quaternion(0.0821152, 0.218737, 0.708436, 0.66598)
bones/17/position = Vector3(-0.323989, 0.058388, 0.0316938)
bones/17/rotation = Quaternion(-0.00242251, 0.103739, 0.99412, 0.0309444)
bones/18/rotation = Quaternion(-0.143959, -0.00529495, 0.00886512, 0.98953)
bones/19/rotation = Quaternion(0.591559, 6.43903e-08, 0.0100252, 0.8062)
bones/21/position = Vector3(1.40974, -0.0736375, 0.123863)
bones/21/rotation = Quaternion(0.300025, -0.111475, -0.939558, 0.121612)
bones/22/position = Vector3(-0.894307, 1.73769, 1.89588)
bones/22/rotation = Quaternion(-0.803324, -0.33884, -0.0825998, 0.482738)
bones/23/position = Vector3(0.152486, 3.17155, 0.791795)
bones/23/rotation = Quaternion(0.444444, 0.432493, -0.576327, 0.532228)
bones/24/position = Vector3(0.21689, 3.27672, 0.780549)
bones/24/rotation = Quaternion(0.194141, 0.120487, 0.692971, 0.683801)
bones/25/position = Vector3(0.21689, 3.27672, 0.780548)
bones/25/rotation = Quaternion(-0.689073, -0.271259, -0.41497, 0.52858)
bones/26/position = Vector3(-0.168341, 3.17059, 0.791743)
bones/26/rotation = Quaternion(0.445636, -0.431254, 0.577981, 0.53044)
bones/27/position = Vector3(-0.233367, 3.27538, 0.780476)
bones/27/rotation = Quaternion(0.194611, -0.120019, -0.6909, 0.685842)
bones/28/position = Vector3(-0.233367, 3.27538, 0.780475)
bones/28/rotation = Quaternion(-0.689945, 0.269121, 0.41643, 0.527386)
bones/29/position = Vector3(0.00893889, 2.78454, 0.774529)
bones/29/rotation = Quaternion(0.139, 0.00335999, -0.0252042, 0.989966)
bones/30/position = Vector3(0.00915106, 2.71349, 0.770663)
bones/30/rotation = Quaternion(0.139, 0.00335999, -0.0252042, 0.989966)
bones/31/position = Vector3(0.1585, 2.76883, 0.759173)
bones/31/rotation = Quaternion(0.240034, 0.000278813, 0.00146465, 0.970763)
bones/32/position = Vector3(-0.171947, 2.76784, 0.759119)
bones/32/rotation = Quaternion(0.240034, 0.000278582, 0.0014646, 0.970763)

[node name="ModelSaïd" parent="." instance=ExtResource("2_uiybe")]
transform = Transform3D(-1, 0.000380167, -0.000893426, 0.000388877, 0.999952, -0.00977962, 0.00088967, -0.00977993, -0.999952, 0.000507611, -1.52514, 2.15385)

[node name="Skeleton3D" parent="ModelSaïd/Armature_001" index="0"]
bones/0/position = Vector3(0, 0.873557, -0.342519)
bones/0/rotation = Quaternion(-0.085177, -0.34016, -0.0309553, 0.93599)
bones/1/rotation = Quaternion(0.217091, 0.100246, -0.0683556, 0.968581)
bones/4/rotation = Quaternion(-0.312136, 0.215988, -0.0190644, 0.924963)
bones/5/position = Vector3(0.499862, 2.56707, 0.424385)
bones/5/rotation = Quaternion(0.138162, -0.24374, -0.952324, 0.120752)
bones/6/rotation = Quaternion(0.438975, -0.0513668, 0.0204102, 0.896797)
bones/7/rotation = Quaternion(0.0561614, -0.0174399, -0.0166868, 0.99813)
bones/8/rotation = Quaternion(0.0832392, 0.0669961, -0.557466, 0.823295)
bones/9/position = Vector3(0.225981, 0.815429, -0.107743)
bones/9/rotation = Quaternion(-0.0243973, 0.311413, 0.941253, -0.128333)
bones/10/rotation = Quaternion(-0.366638, -0.0133593, -0.139236, 0.919789)
bones/11/rotation = Quaternion(0.603407, 0.0295501, 0.0413989, 0.79581)
bones/13/position = Vector3(-0.58169, 2.72506, -0.152285)
bones/13/rotation = Quaternion(-0.365803, -0.42068, 0.767556, 0.316346)
bones/14/rotation = Quaternion(0.518082, 0.0371486, 0.272321, 0.809971)
bones/15/rotation = Quaternion(0.0561614, 0.0174399, 0.0166868, 0.99813)
bones/16/rotation = Quaternion(-0.172468, 0.341712, 0.649547, 0.656945)
bones/17/position = Vector3(-0.270801, 0.815429, -0.523775)
bones/17/rotation = Quaternion(-0.67617, 0.210974, 0.654067, 0.265483)
bones/18/rotation = Quaternion(-0.359272, -0.240093, 0.0971474, 0.896572)
bones/19/rotation = Quaternion(0.593778, -0.0290328, -0.0395142, 0.803133)
bones/20/rotation = Quaternion(0.117959, 7.48602e-10, -0.0034341, 0.993012)
bones/21/position = Vector3(0.565605, 1.61836, 2.10596)
bones/21/rotation = Quaternion(0.695734, -0.630591, -0.103726, 0.327948)
bones/22/position = Vector3(-1.48777, 1.39998, -0.804302)
bones/22/rotation = Quaternion(0.0297564, 0.246608, 0.922081, 0.29676)
bones/23/position = Vector3(0.0341676, 3.86722, 0.961299)
bones/23/rotation = Quaternion(0.425401, 0.367474, -0.593029, 0.576466)
bones/24/position = Vector3(0.100598, 3.96936, 0.939196)
bones/24/rotation = Quaternion(0.0721857, 0.183175, 0.796892, 0.571138)
bones/25/position = Vector3(0.100598, 3.96936, 0.939196)
bones/25/rotation = Quaternion(-0.685104, -0.389737, -0.369, 0.492521)
bones/26/position = Vector3(-0.285857, 3.86717, 0.938597)
bones/26/rotation = Quaternion(0.382427, -0.40728, 0.621731, 0.548929)
bones/27/position = Vector3(-0.348532, 3.9693, 0.907336)
bones/27/rotation = Quaternion(0.128421, -0.223119, -0.789701, 0.556865)
bones/28/position = Vector3(-0.348532, 3.9693, 0.907336)
bones/28/rotation = Quaternion(-0.709556, 0.353806, 0.319671, 0.518808)
bones/29/position = Vector3(-0.112976, 3.48496, 0.991421)
bones/29/rotation = Quaternion(0.0656854, -0.0340777, -0.0244708, 0.996958)
bones/30/position = Vector3(-0.113443, 3.40518, 0.998151)
bones/30/rotation = Quaternion(0.0656854, -0.0340777, -0.0244708, 0.996958)
bones/31/position = Vector3(0.037069, 3.43261, 0.989226)
bones/31/rotation = Quaternion(0.16258, -0.0512258, -0.0915107, 0.981106)
bones/32/position = Vector3(-0.292541, 3.43256, 0.965844)
bones/32/rotation = Quaternion(0.15569, -0.0183017, 0.102933, 0.982258)
bones/33/position = Vector3(0.509663, 1.28443, 2.03752)
bones/33/rotation = Quaternion(-0.0618425, 0.64401, 0.221492, 0.729636)

[node name="AnimationPlayer" parent="ModelSaïd" index="1"]
autoplay = "idle_001"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-0.988709, 0.0643908, 0.135307, 0.100378, 0.955033, 0.278991, -0.111258, 0.289423, -0.950714, 0, 5.11233, -0.684646)

[node name="CamPos1" type="Node3D" parent="."]

[node name="CamPos2" type="Node3D" parent="."]
transform = Transform3D(-0.995407, 0.00066857, 0.0957341, 0.071021, 0.675719, 0.73373, -0.0641988, 0.737159, -0.672663, 0, 3.235, 1.291)

[editable path="ModelMalek"]
[editable path="ModelSaïd"]
